# base64client

./: CMakeLists.txt  base64client.sln  base64client.vcxproj  base64client.vcxproj.filters  getopt_windows.h  main.cpp
